// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details component tests renders properly 1`] = `
<div>
  <div
    class="details card my-3 d-inline-block"
  >
    <div
      class="card-body"
    >
      <p>
        User selected: 
        <b>
          Dora Crenshaw
        </b>
      </p>
      <p
        class="d-flex"
      >
        <span
          class="mr-3"
        >
          Description:
        </span>
        <textarea
          class="form-control"
          readonly=""
        >
          amet lacus et fringilla orci
        </textarea>
      </p>
      <div>
        <p>
          Address: 
          <b>
            5670 At Ave
          </b>
        </p>
        <p>
          City: 
          <b>
            Pleasant Grove
          </b>
        </p>
        <p>
          State: 
          <b>
            PA
          </b>
        </p>
        <p>
          Index: 
          <b>
            21878
          </b>
        </p>
      </div>
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Details component tests renders properly without address and description 1`] = `
<div>
  <div
    class="details card my-3 d-inline-block"
  >
    <div
      class="card-body"
    >
      <p>
        User selected: 
        <b>
          Randy Bunch
        </b>
      </p>
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
  </div>
</div>
`;
